--- a/mock/package.json
+++ b/mock/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start:dev": "ts-node-dev --respawn --transpile-only ./src/index.ts"
+  },
   "keywords": [],
   "author": "Cristhian Manzano",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
+  }
 }
