--- a/mock/package.json
+++ b/mock/package.json
@@ -10,13 +10,17 @@
   "author": "Cristhian Manzano",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^18.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "helmet": "^5.1.0"
   }
 }
