--- a/mock/package.json
+++ b/mock/package.json
@@ -13,6 +13,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
@@ -21,6 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "helmet": "^5.1.0"
+    "helmet": "^5.1.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.1"
   }
 }
