--- a/mock/package.json
+++ b/mock/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "helmet": "^5.1.0",
     "morgan": "^1.10.0",
     "winston": "^3.8.1"
