--- a/mock/package.json
+++ b/mock/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "ts-node-dev --respawn --transpile-only ./src/index.ts"
+    "start:dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "start:prod": "node dist/index.js"
   },
   "keywords": [],
   "author": "Cristhian Manzano",
